--- a/TKV2025_soubory/sheet024.htm
+++ b/TKV2025_soubory/sheet024.htm
@@ -1,4 +1,5 @@
-<html xmlns:o="urn:schemas-microsoft-com:office:office"
+<html xmlns:v="urn:schemas-microsoft-com:vml"
+xmlns:o="urn:schemas-microsoft-com:office:office"
 xmlns:x="urn:schemas-microsoft-com:office:excel"
 xmlns="http://www.w3.org/TR/REC-html40">
 
@@ -1086,7 +1087,7 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71>Aktuální kolo</td>
-  <td class=xl165 style='border-left:none'>16</td>
+  <td class=xl165 style='border-left:none'>17</td>
   <td class=xl96></td>
   <td class=xl97>&nbsp;</td>
   <td class=xl163>&nbsp;</td>
@@ -1220,7 +1221,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>8850</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>430
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>403
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -1359,7 +1360,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>6450</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>313
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>294
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -1587,7 +1588,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>5800</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>282
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>264
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -1816,7 +1817,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>5600</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>272
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>255
   Kč</td>
   <td class=xl70></td>
   <td class=xl71>Odměny</td>
@@ -2044,7 +2045,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>5450</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>265
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>248
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -2182,7 +2183,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>5400</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>262
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>246
   Kč</td>
   <td class=xl70></td>
   <td colspan=3 class=xl71>Žebříček vítězů</td>
